assets/styles/layouts/_footer.scss
footer.content-info {
	
	position: absolute;
  	bottom: 0;
  	width: 100%;
  	clear: both;
  
	background:$footer-grey;
	padding-top:60px;
	/*padding-bottom:60px;*/
	font-size:14px;
	
	
	ul {
		list-style-type: none;
		margin: 0;
		padding: 0;
		overflow: hidden;
			
		li {
			display:inline-block;
			vertical-align:top;
		}
	}
	
	.widget_nav_menu {
		margin-top:10px;
		ul {
			li {
				padding-right:15px;
				a {
					color:$dark-grey;
					text-decoration:underline;
					&:hover {
						color:$black;
					}
				}
			}
		}
	}
	.widget_text {
		color:$light-grey;
	}
	
	.social {
		ul {
			text-align:right; 
			@media (max-width: $screen-tablet-min) {
				text-align:left; 
				margin-top:30px;
			}
			li {
				a {
					font:14px/1 FontAwesome;
					border: 1px solid $dark-grey;
					border-radius: 50%;
					color: $dark-grey;
					display: inline-block;
					font-size: 26px;
					font-weight: 400;
					height: 46px;
					line-height: 44px;
					margin-bottom: 15px;
					text-align: center;
					text-decoration: none;
					vertical-align: middle;
					width: 46px;
					opacity:0.8;
					@include transition;
					&:hover {
						opacity:1;
					}
				}
			}
		}
	}
	
}

.agency-footer {
	.container {
		padding: 20px 0px 20px 0px;
		margin-left: auto;
		margin-right: auto;
		position: relative;
		span{
			padding: 20px 0px 20px 0px;
		}
    }
    .col{
		@media (max-width: $screen-handheld-min) {
				padding-left: 4%;
		}
    }
	.agency-footer-links {
		a {
			color: $white;
			text-decoration: none;
			display: block;
			font-weight: bold;
			font-size: 16px;
			float: left;
			margin-right: 2.12766%;
			padding: 5px 0;
			width: 30%;
			@media (max-width: $screen-tablet-min) and (min-width: $screen-handheld-min){
				width: 45%;
			}
			@media (max-width: $screen-handheld-min) {
				width: 100%;
				float: none;
			}
		}
	}
	.agency-logo {
		padding: 5px 0;
	}
	.copyright {
		color: $white;
		font-size: 10px;
		margin: 0;
		line-height: 14px;
		float: left;
		padding-top:5px;
		p{
			font-size: 10px;
			margin: 0;
			line-height: 14px;
		}
		a{
			color: $white;
			text-decoration: none;
		}
	}
}

